--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,32 @@
-    # Binaries for the current project
-    *.exe
-    *.dll
-    *.so
-    *.dylib
-    *.o
+# If you prefer the allow list template instead of the deny list, see community template:
+# https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
+#
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
 
-    # Go build cache
-    /bin/
-    /pkg/
-    /build/
+# Test binary, built with `go test -c`
+*.test
 
-    # Test output
-    *.test
-    *.out
+# Code coverage profiles and other test artifacts
+*.out
+coverage.*
+*.coverprofile
+profile.cov
 
-    # IDE-specific files (examples)
-    .idea/
-    .vscode/
-    *.sublime-workspace
-    *.iml
+# Dependency directories (remove the comment below to include it)
+# vendor/
 
-    # Dependency vendor directory (if used)
-    /vendor/
+# Go workspace file
+go.work
+go.work.sum
 
-    # Environment variables or sensitive data
-    .env
-    *.env
+# env file
+.env
+
+# Editor/IDE
+# .idea/
+# .vscode/
