--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 *.dll
 *.so
 *.dylib
+/bin
 
 # Test binary, built with `go test -c`
 *.test
@@ -32,7 +33,8 @@ go.work.sum
 # .vscode/
 
 #Air config files
-.air.toml
+*.air.toml
+air.toml
 
 # Temporary files and folder
 mycmd
