--- a/.dockerignore
+++ b/.dockerignore
@@ -1,52 +1,51 @@
+# flyctl launch added from .gitignore
 # If you prefer the allow list template instead of the deny list, see community template:
 # https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
 #
 # Binaries for programs and plugins
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
-/bin
+**/*.exe
+**/*.exe~
+**/*.dll
+**/*.so
+**/*.dylib
+bin
 
 # Test binary, built with `go test -c`
-*.test
+**/*.test
 
 # Code coverage profiles and other test artifacts
-*.out
-coverage.*
-*.coverprofile
-profile.cov
+**/*.out
+**/coverage.*
+**/*.coverprofile
+**/profile.cov
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
 # Go workspace file
-go.work
-go.work.sum
+**/go.work
+**/go.work.sum
 
 # env file
-.env
+**/.env
 
 # Editor/IDE
 # .idea/
 # .vscode/
 
 #Air config files
-*.air.toml
-air.toml
+**/*.air.toml
+**/air.toml
 
 # Temporary files and folder
-mycmd
-tmp/
-*.log
-*.bak
+**/mycmd
+**/tmp
+**/*.log
+**/*.bak
 # Environment files (all variants)
-.env.local
-.env.production
-.env.development
-.env.*.local
-*.env
-
-#
-.claude/
+**/.env.local
+**/.env.production
+**/.env.development
+**/.env.*.local
+**/*.env
+fly.toml
